tests/invalid/UnionType_Invalid_1.whiley
type IntReal is int | real

function f(IntReal x) -> int:
    return x
